[metadata]
name = swift3_gatekeeper
version = 0.0.1
summary = Middleware to filter S3 relational user-metadata in swift
description-file =
    README.md
author = A2company
author-email = admin@a2company.co.kr

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    swift3_gatekeeper


[entry_points]
paste.filter_factory =
    swift3_gatekeeper= swift3_gatekeeper.middleware:filter_factory
